--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^2.0.3",
     "rxjs": "^5.5.6",
+    "web3": "^1.0.0-beta.26",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
